--- a/src/views/partials/tasks/taskForm.hbs
+++ b/src/views/partials/tasks/taskForm.hbs
@@ -1,31 +1,31 @@
 <div class="card card-body p-4 rounded-0 bg-dark text-white">
-  <h3>Add A Task</h3>
+  <h3>Agregar una tarea</h3>
   <form action="/tasks/add" method="post">
 
     {{! Title Input }}
     <div class="mb-3">
-      <label for="title">Write a title:</label>
+      <label for="title">Escribe un título:</label>
       <input
         id="title"
         class="form-control rounded-0 bg-dark text-white"
         type="text"
         name="title"
-        placeholder="Title"
+        placeholder="Titulo"
         autofocus
       />
     </div>
 
     {{! Description Input }}
     <div class="mb-3">
-      <label for="description">Description</label>
+      <label for="description">Descripción</label>
       <textarea
         class="form-control rounded-0 bg-dark text-white"
         name="description"
         cols="80"
-        placeholder="Add a Description"
+        placeholder="Agregar una descriptión"
       ></textarea>
     </div>
 
-    <button class="btn btn-primary" type="submit">Add</button>
+    <button class="btn btn-primary" type="submit">Agregar</button>
   </form>
 </div>
