--- a/src/views/partials/tasks/taskTable.hbs
+++ b/src/views/partials/tasks/taskTable.hbs
@@ -3,9 +3,9 @@
     <thead>
       <tr>
         <th>N°</th>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Operations</th>
+        <th>Titulo</th>
+        <th>Descripción</th>
+        <th>Operaciones</th>
       </tr>
     </thead>
     <tbody>
@@ -19,17 +19,17 @@
               <a
                 class="btn btn-success"
                 href="/tasks/{{_id}}/toggleDone"
-              >Done</a>
+              >Hecho</a>
             {{else}}
               <a class="btn btn-dark" href="/tasks/{{_id}}/toggleDone">
-                Undone
+                Deshecho
               </a>
             {{/if}}
             <a href="/tasks/{{_id}}/delete" class="btn btn-danger">
-              Delete
+              Borrar
             </a>
             <a href="/tasks/{{_id}}/edit" class="btn btn-info">
-              Edit
+              Editar
             </a>
           </td>
         </tr>
